possibility of multiple ones we're considering...just want it in the
SVN history for potential future reference.
----------------------------------------------------------------------
Wed Dec 29 02:13:32 2010                        Michael Jennings (mej)

Use magic filehandle syntax <> if stdin isn't a tty.
----------------------------------------------------------------------
Wed Dec 29 19:39:49 2010                        Michael Jennings (mej)

Rearrange.  Tested, works fine.
----------------------------------------------------------------------
Sat Jan  1 16:07:12 2011                        Michael Jennings (mej)

Rearrange help display a bit to be more clear to the uninitiated.  :-)
----------------------------------------------------------------------
Sun Jan  2 05:36:34 2011                        Michael Jennings (mej)

Work in progress:  Log target handling.
----------------------------------------------------------------------
Fri Mar  4 16:40:23 2011                        Michael Jennings (mej)

Fix bug in Object->set() that wasn't allowing object member values to
be references.
----------------------------------------------------------------------
Sat Mar  5 01:12:07 2011                        Michael Jennings (mej)

Add subversion revision number to RPM release field.

Numerous spec file fixes and cleanups.
----------------------------------------------------------------------
Tue Mar 15 15:24:40 2011                        Michael Jennings (mej)

Handle warnings/fatal errors if Debug.pm is loaded by printing a stack trace.
----------------------------------------------------------------------
Wed Mar 16 13:55:17 2011                        Michael Jennings (mej)

Refactor logging and debugging to be more flexible.

Flesh out syslog and alternative logging target handling.

Disable backtrace on warn/die invocation...too noisy for now.
----------------------------------------------------------------------