@@ -4,7 +4,7 @@ AC_CONFIG_SRCDIR([.])
 AM_CONFIG_HEADER([config.h])
 
 AC_PROG_INSTALL
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_PROG_LIBTOOL
 AC_PROG_CC
 
